// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete secret secret deleted: secret removal 1`] = `
Array [
  Array [
    "DELETE FROM \\"secrets-database-escaped-id\\" WHERE \`id\` = \\"secret-selector-escaped\\"",
  ],
]
`;

exports[`get secret reading secret: reading secret, secret exists 1`] = `
Array [
  Array [
    "SELECT \`secret\` FROM \\"secrets-database-escaped-id\\" WHERE id = \\"secret-selector-escaped\\"",
  ],
]
`;

exports[`set secret error on setting secret: error on setting secret 1`] = `
Array [
  Array [
    "START TRANSACTION;
     
      SELECT @idx := COALESCE(MAX(\`idx\`) + 1, 0) FROM \\"secrets-database-escaped-id\\";
      
      INSERT INTO \\"secrets-database-escaped-id\\"(
       \`idx\`,
       \`id\`, 
       \`secret\`
       ) VALUES(
        @idx,
        \\"secret-selector-escaped\\",
        \\"secret-value-escaped\\"
      );
      
      COMMIT;",
  ],
  Array [
    "ROLLBACK;",
  ],
]
`;

exports[`set secret secret is set: setting secret 1`] = `
Array [
  Array [
    "START TRANSACTION;
     
      SELECT @idx := COALESCE(MAX(\`idx\`) + 1, 0) FROM \\"secrets-database-escaped-id\\";
      
      INSERT INTO \\"secrets-database-escaped-id\\"(
       \`idx\`,
       \`id\`, 
       \`secret\`
       ) VALUES(
        @idx,
        \\"secret-selector-escaped\\",
        \\"secret-value-escaped\\"
      );
      
      COMMIT;",
  ],
]
`;
